--- a/api/sam.tournament.yaml
+++ b/api/sam.tournament.yaml
@@ -8,7 +8,7 @@ Parameters:
     Type: String
   DeleteTournamentTopic:
     Type: String
-  UpdateTournamentTopic:
+  TournamentUpdatedTopic:
     Type: String
   Env:
     Type: String
@@ -71,19 +71,7 @@ Resources:
             Method: PUT 
       Environment:
         Variables:
-          UPDATE_TOURNAMENT_TOPIC: !Ref UpdateTournamentTopic
-
-  UpdateMatchWithTournament:
-    Type: AWS::Serverless::Function
-    Properties:
-      FunctionName: !Sub Foci2020-${Env}-UpdateMatchWithTournament
-      CodeUri: ./dist/update-match-with-tournament
-      Role: !Ref LambdaRoleArn
-      Events:
-        SNS:
-          Type: SNS
-          Properties:
-            Topic: !Ref UpdateTournamentTopic           
+          TOURNAMENT_UPDATED_TOPIC: !Ref TournamentUpdatedTopic        
 
   ListTournaments:
     Type: AWS::Serverless::Function
