--- a/api/package.json
+++ b/api/package.json
@@ -50,7 +50,7 @@
     "collectCoverageFrom": [
       "**/*.{ts,tsx}",
       "!**/node_modules/**",
-      "!src/entries/*.ts",
+      "!src/**/*.index.ts",
       "!src/dependencies.ts"
     ],
     "coverageReporters": [
