--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -229,3 +229,5 @@ Outputs:
     Value: !Ref UserPool
   ClientId:
     Value: !Ref ApplicationClient
+  UserPoolArn:
+    Value: !GetAtt UserPool.Arn
