--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -60,7 +60,7 @@ Resources:
             - AttributeName: matchId
               KeyType: HASH
           Projection:
-            ProjectionType: KEYS_ONLY
+            ProjectionType: ALL
         - IndexName: indexByUserId
           KeySchema:
             - AttributeName: userId
