--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Parameters:
   Env:
     Type: String
@@ -12,7 +12,6 @@ Resources:
         Env: !Ref Env
 
   Team:
-    DependsOn: Infrastructure
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: api/sam.team.yaml
@@ -25,7 +24,6 @@ Resources:
         Env: !Ref Env
 
   Tournament:
-    DependsOn: Infrastructure
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: api/sam.tournament.yaml
@@ -38,7 +36,6 @@ Resources:
         Env: !Ref Env
 
   Match:
-    DependsOn: Infrastructure
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: api/sam.match.yaml
@@ -53,7 +50,6 @@ Resources:
         Env: !Ref Env
 
   User:
-    DependsOn: Infrastructure
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: api/sam.user.yaml
@@ -65,11 +61,6 @@ Resources:
 
   Api:
     Type: AWS::CloudFront::Distribution
-    DependsOn: 
-      - Match
-      - Team
-      - Tournament
-      - User
     Properties:
       DistributionConfig:
         Enabled: true
@@ -93,6 +84,8 @@ Resources:
         CacheBehaviors:
           - ForwardedValues:
               QueryString: true
+              Headers:
+                - Authorization
             PathPattern: /team/*
             TargetOriginId: Team
             ViewerProtocolPolicy: redirect-to-https
@@ -109,6 +102,8 @@ Resources:
               - DELETE
           - ForwardedValues:
               QueryString: true
+              Headers:
+                - Authorization
             PathPattern: /match/*
             TargetOriginId: Match
             ViewerProtocolPolicy: redirect-to-https
@@ -125,6 +120,8 @@ Resources:
               - DELETE
           - ForwardedValues:
               QueryString: true
+              Headers:
+                - Authorization
             PathPattern: /tournament/*
             TargetOriginId: Tournament
             ViewerProtocolPolicy: redirect-to-https
@@ -141,6 +138,8 @@ Resources:
               - DELETE
           - ForwardedValues:
               QueryString: true
+              Headers:
+                - Authorization
             PathPattern: /user/*
             TargetOriginId: User
             ViewerProtocolPolicy: redirect-to-https
@@ -154,7 +153,7 @@ Resources:
               - PUT
               - PATCH
               - POST
-              - DELETE              
+              - DELETE
         Origins:
           - DomainName: !GetAtt Team.Outputs.TeamApi
             OriginPath: /Prod
@@ -165,17 +164,17 @@ Resources:
             OriginPath: /Prod
             Id: Match
             CustomOriginConfig:
-              OriginProtocolPolicy: https-only            
+              OriginProtocolPolicy: https-only
           - DomainName: !GetAtt Tournament.Outputs.TournamentApi
             OriginPath: /Prod
-            Id: Tournament                   
+            Id: Tournament
             CustomOriginConfig:
-              OriginProtocolPolicy: https-only            
+              OriginProtocolPolicy: https-only
           - DomainName: !GetAtt User.Outputs.UserApi
             OriginPath: /Prod
-            Id: User                   
+            Id: User
             CustomOriginConfig:
-              OriginProtocolPolicy: https-only                
+              OriginProtocolPolicy: https-only
 
 Outputs:
   FociApi:
