--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "build:api": "cd api && npm run build",
-    "deploy:local": "export ENV=LOCAL && npm run build:api && npm run aws-package -- --profile losonczil && npm run aws-deploy -- --profile losonczil",
-    "deploy:ci": "export ENV=CI && npm run build:api && npm run aws-package -- --profile ci && npm run aws-deploy -- --profile ci",
+    "deploy:local": "export ENV=LOCAL && npm run build:api && npm run sam-package -- --profile losonczil && npm run sam-deploy -- --profile losonczil",
+    "deploy:ci": "export ENV=CI && npm run build:api && npm run sam-package -- --profile ci && npm run sam-deploy -- --profile ci",
     "aws-package": "aws cloudformation package --template-file cloudformation.yaml --s3-bucket losonczil-packages-eu-west-1 --output-template-file packaged.cloudformation.yaml",
-    "aws-deploy": "aws cloudformation deploy --template-file packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV}"
+    "aws-deploy": "aws cloudformation deploy --template-file packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV}",
+    "sam-package": "sam package -t cloudformation.yaml --s3-bucket losonczil-packages-eu-west-1 --output-template-file packaged.cloudformation.yaml",
+    "sam-deploy": "sam deploy -t packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV}"
   }
 }
 
