--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "deploy:local": "export ENV=LOCAL && npm run build:api && npm run sam-package -- --profile losonczil && npm run sam-deploy -- --profile losonczil",
     "deploy:ci": "export ENV=CI && npm run build:api && npm run sam-package -- --profile ci && npm run sam-deploy -- --profile ci",
     "aws-package": "aws cloudformation package --template-file cloudformation.yaml --s3-bucket losonczil-packages-eu-west-1 --output-template-file packaged.cloudformation.yaml",
-    "aws-deploy": "aws cloudformation deploy --template-file packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV} TestUserPassword=${CYPRESS_PASSWORD}",
+    "aws-deploy": "aws cloudformation deploy --template-file packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV} TestUserPassword=${CYPRESS_PASSWORD:-'\"\"'} AdminUserEmail=${ADMIN_USER_EMAIL}",
     "sam-package": "sam package -t cloudformation.yaml --s3-bucket losonczil-packages-eu-west-1 --output-template-file packaged.cloudformation.yaml",
-    "sam-deploy": "sam deploy -t packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV} TestUserPassword=${CYPRESS_PASSWORD}"
+    "sam-deploy": "sam deploy -t packaged.cloudformation.yaml --stack-name foci2020-${ENV} --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --parameter-overrides Env=${ENV} TestUserPassword=${CYPRESS_PASSWORD:-'\"\"'} AdminUserEmail=${ADMIN_USER_EMAIL}"
   }
 }
 
